Changing the color twice in a script color picker causes a crash #38516

Closed
opened 2014-02-06 15:24:49 +01:00 by Dani Epstein · 10 comments

System Information
Ubuntu 13.10, GTX 460

Blender Version
2.96 hash 39ad2cd

Also tested with previous builds

Short description of error
In the above build, clicking on the color selector and then with the color picker still selected, changing the color twice in a row results in a crash

Exact steps for others to reproduce the error
Run the script.
Then run "Ribbon Render Kit" from the space bar.
Click on one of the colors in the script's window.
Now the color picker will pop up.
Click on a color, then click on a color again.
Blender crashes with a segmentation fault

the script file: buggy_script.blend

**System Information** Ubuntu 13.10, GTX 460 **Blender Version** 2.96 hash 39ad2cd Also tested with previous builds **Short description of error** In the above build, clicking on the color selector and then with the color picker still selected, changing the color twice in a row results in a crash **Exact steps for others to reproduce the error** Run the script. Then run "Ribbon Render Kit" from the space bar. Click on one of the colors in the script's window. Now the color picker will pop up. Click on a color, then click on a color again. Blender crashes with a segmentation fault the script file: [buggy_script.blend](https://archive.blender.org/developer/F76219/buggy_script.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DaniEpstein

Added subscriber: @DaniEpstein

This issue was referenced by blender/blender-addons-contrib@e2541f87bc

This issue was referenced by blender/blender-addons-contrib@e2541f87bcef84481aabf19e15664cfdac452cf7

This issue was referenced by e2541f87bc

This issue was referenced by e2541f87bcef84481aabf19e15664cfdac452cf7
Brecht Van Lommel self-assigned this 2014-02-06 18:02:47 +01:00

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e2541f87bc.

Closed by commit e2541f87bc.
Author

Um, wow. Thanks!

Will this fix be available from builder.blender.org tomorrow?

Um, wow. Thanks! Will this fix be available from builder.blender.org tomorrow?

Yes, it will be in the build tomorrow.

Yes, it will be in the build tomorrow.
Author

Thanks!

Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38516
No description provided.