Fix T38516: crash when using color picker from redo panel.